[tool.poetry]
name = "liepa-tts"
version = "0.1.0"
description = "Python bindings for Lithuanian language synthesizer from LIEPA project"
authors = ["Ozymandias <tomas.rav@gmail.com>"]
license = "MIT"

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
